openshift/disallow-self-provisioner-binding/.chainsaw-test/policy-ready.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-self-provisioner-binding
status:
  ready: true
