openshift/disallow-self-provisioner-binding/.chainsaw-test/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: disallow-self-provisioner-binding
spec:
  steps:
  - name: step-01
    try:
    - apply:
        file: ../disallow-self-provisioner-binding.yaml
    - assert:
        file: policy-ready.yaml
  - name: step-02
    try:
    - apply:
        file: chainsaw-step-02-apply-1.yaml
  - name: step-03
    try:
    - apply:
        file: crb-good.yaml
    - apply:
        expect:
        - check:
            ($error != null): true
        file: crb-bad-roleref.yaml
    - apply:
        expect:
        - check:
            ($error != null): true
        file: crb-bad-sub-update.yaml
